<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_4"
    android:alpha="0.79"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:textColor="#FFE4C4"
                android:textSize="44sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:text="@string/reservation"
                android:textColor="#FFE4C4"
                android:textSize="44sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/customer"
                android:textColor="#FFE4C4"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:textColor="#FFE4C4"
                app:backgroundTint="#FFE4C4"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/mobilephone"
                android:textColor="#FFE4C4"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text=""
                android:textColor="#FFE4C4"
                app:backgroundTint="#FFE4C4"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SizeGroup"
                android:fontFamily="cursive"
                android:textSize="30sp"
                android:textColor="#FFE4C4"/>

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text=""
                android:textColor="#FFE4C4"
                app:backgroundTint="#FFE4C4"/>

            <RadioGroup
                android:id="@+id/radioGroupSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smoke"
                    android:textColor="#FFE4C4"
                    />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonsmoke"
                    android:textColor="#FFE4C4"/>
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="30sp"
                android:fontFamily="cursive"
                android:textColor="#FFE4C4"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FEE8CF"
                android:calendarViewShown="false"

                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#FFE4C4"
                android:fontFamily="cursive"
                android:textSize="30sp"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FEE8CF"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Submit" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>